fix(styles): changed some colors and alignment with home page

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -23,7 +23,7 @@
 
 .navbar-nav a:hover {
   padding-bottom: 5%;
-  border-bottom: 5px solid #1709FF;
+  border-bottom: 4px solid #FF5722;
 }
 
 #user-actions button {
@@ -45,7 +45,7 @@
 #brand:hover {
   padding-bottom: 1%;
   font-size: 28px;
-  background: -webkit-linear-gradient(#1709ff, #333);
+  background: -webkit-linear-gradient(#FF5722, #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
