--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,6 +1,6 @@
 #DONT-LOSE-IT {
   text-align: center;
-  font-size: 120px;
+  font-size: 100px;
   font-weight: 800;
   z-index: 1;
 }
@@ -40,9 +40,15 @@
 }
 
 .generation-container {
-  padding-top: 35px;
+  padding: 35px 25px 25px 25px;
   background-color: rgb(32, 32, 32);
   color: white;
+
+  .img-slide {
+    display: block;
+    width: 100vw;
+    height: 60%;
+  }
 
   h2 {
     font-size: 50px;
@@ -56,14 +62,21 @@
 }
 
 .who-container {
-  height: 50vh;
-  padding: 20px 20% 50px 20%;
+  height: 500px;
+  padding: 35px 25px 25px 25px;
+  margin-top: 10%;
+
+  h2 {
+    font-size: 45px;
+  }
 
   .row {
-    padding-top: 35px;
-    padding-bottom: 35px;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
+
+
 
 
 .carousel-caption {
@@ -71,3 +84,20 @@
 }
 
 
+
+@media only screen and (max-width: 600px) {
+  #DONT-LOSE-IT {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 800;
+    z-index: 1;
+  }
+
+  .generation-container {
+    padding: 25px 15px 15px 15px;
+
+    h2 {
+      font-size: 35px;
+    }
+  }
+}
