--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,6 @@ body {
 .margin-top {
   margin-top: 16px;
 }
+
+
+$orange: #ff6f00;
